[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/Squares.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/UI/icons/apple.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/icons/enemy.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/icons/hourglass.png" type="Texture" id=4]
[ext_resource path="res://scripts/menus/level_passed.gd" type="Script" id=5]
[ext_resource path="res://themes/button.tres" type="Theme" id=6]
[ext_resource path="res://assets/UI/buttons/BackButton.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 5
font_data = ExtResource( 1 )

[node name="level_passed" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.976471, 0.952941, 0.352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -464.5
margin_top = 25.0
margin_right = 464.5
margin_bottom = 131.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level passed!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fruit_icon" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -164.0
margin_right = -168.0
margin_bottom = -132.0
rect_scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fruit_label" type="Label" parent="."]
margin_left = 464.0
margin_top = 184.0
margin_right = 520.0
margin_bottom = 202.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemies_icon" type="TextureRect" parent="."]
margin_left = 352.0
margin_top = 264.0
margin_right = 396.0
margin_bottom = 296.0
rect_scale = Vector2( 1.875, 1.875 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemies_label" type="Label" parent="."]
margin_left = 464.0
margin_top = 264.0
margin_right = 520.0
margin_bottom = 282.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_icon" type="TextureRect" parent="."]
margin_left = 336.0
margin_top = 328.0
margin_right = 926.0
margin_bottom = 898.0
rect_scale = Vector2( 0.188, 0.188 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_label" type="Label" parent="."]
margin_left = 464.0
margin_top = 352.0
margin_right = 520.0
margin_bottom = 370.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -64.0
margin_right = 64.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_level_button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -113.5
margin_top = -138.0
margin_right = 113.5
margin_bottom = -42.0
theme = ExtResource( 6 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="next_level_button" to="." method="_on_next_level_button_pressed"]
